Fix tag visibility in dark mode

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -57,3 +57,7 @@
 .preview-box li {
   margin-bottom: 0.25em;
 }
+
+.chakra-badge:not(.ingredient) {
+  color: black !important;
+}
